🐛 FIX: Minor responsiveness and spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,13 @@
   --tertiary-color: #e8aa42;
   --quaternary-color: #FFC525;
 }
+#root{
+  max-height: 100vh;
+}
 .home{
   position: relative;
-  height: 100vh;
+  max-height: 100vh;
+  min-height: 100vh;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Noto Serif', serif;
@@ -98,8 +102,8 @@ a:hover{
 
 @media (max-width:576px){
   .info-card{
-    width: 80% !important;
-    height: 90% !important;
+    width: 80vw !important;
+    height: 80vh !important;
   }
 }
 
